--- a/index.css
+++ b/index.css
@@ -1,35 +1,38 @@
-/* Center everything on the page */
 body {
     display: flex;
     font-family: "Arial", sans-serif;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
     margin: 0;
-    background-color: rgb(41, 174, 192);
-}
-
-#result {
-    position: absolute;
-    top: 100px; /* Adjusted to create space between the title and result */
-    z-index: 10;
-    font-size: 20px;
-    margin-top: 10px;
-      
-}
-
-#camera {
-    position: relative;
-    z-index: 1;
-    width: 640px; /* Adjusted width */
-    height: 480px; /* Adjusted height */
+    background-color: #ebdbb2;
 }
 
 video {
     transform: scaleX(-1);
-    width: 480px;
+    width: 550px;
+    margin-bottom: 30px;
+    border-radius: 50px;
 }
 
 h1 {
     margin-bottom: auto;
+    padding-bottom: 15px;
+}
+
+#result{
+    font-size: 25px;
+    
+    padding: 20px;
+    padding-top: 10px;
+}
+
+
+footer {
+    padding: 40px;
+    width: 100%;
+    text-align: center;
+    background-color: #d5c4a1;
+}
+h3{
+    padding-left: 20px;
 }
