--- a/index.css
+++ b/index.css
@@ -4,14 +4,30 @@ body {
     flex-direction: column;
     align-items: center;
     margin: 0;
-    background-color: #ebdbb2;
+    background-color: #fbf1c7;
 }
 
+article{
+    background-color: #ebdbb2;
+}
 video {
     transform: scaleX(-1);
     width: 550px;
     margin-bottom: 30px;
     border-radius: 50px;
+}
+
+main{
+    font-size: 18px;
+    text-align: center;
+}
+
+article{
+    text-align: center;
+    font-size: 20px;
+    width: 100%;
+    font-family: "Arial", sans-serif;
+
 }
 
 h1 {
@@ -29,9 +45,10 @@ h1 {
 
 footer {
     padding: 40px;
-    width: 100%;
+    width: 94%;
     text-align: center;
     background-color: #d5c4a1;
+    font-size: 30px;
 }
 h3{
     padding-left: 20px;
