--- a/index.css
+++ b/index.css
@@ -1,58 +1,56 @@
 body {
-    display: flex;
-    font-family: "Arial", sans-serif;
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
-    background-color: #000;
-    color: #fff;
+  display: flex;
+  font-family: "Arial", sans-serif;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  background-color: #000;
+  color: #fff;
 }
 
-article{
-    background-color: #111;
-
+article {
+  background-color: #111;
 }
 
 video {
-    transform: scaleX(-1);
-    width: 550px;
-    margin-bottom: 30px;
-    border-radius: 50px;
+  transform: scaleX(-1);
+  width: 600px;
+  margin-bottom: 30px;
+  border-radius: 50px;
 }
 
-main{
-    font-size: 18px;
-    text-align: center;
+main {
+  font-size: 18px;
+  text-align: center;
 }
 
-article{
-    text-align: center;
-    font-size: 20px;
-    width: 100%;
-    font-family: "Arial", sans-serif;
-
+article {
+  text-align: center;
+  font-size: 20px;
+  width: 100%;
+  font-family: "Arial", sans-serif;
 }
 
 h1 {
-    margin-bottom: auto;
-    padding-bottom: 15px;
+  margin-bottom: auto;
+  padding-bottom: 15px;
 }
 
-#result{
-    font-size: 25px;
-    
-    padding: 20px;
-    padding-top: 10px;
-}
+#result {
+  font-size: 25px;
 
+  padding: 20px;
+  padding-top: 10px;
+}
 
 footer {
-    padding: 40px;
-    width: 94%;
-    text-align: center;
-    background-color: #fff;
-    font-size: 30px;
+  padding: 40px;
+  width: 94%;
+  text-align: center;
+  background-color: #1a1818;
+  font-size: 30px;
+  color: #fff;
 }
-h3{
-    padding-left: 20px;
+h3 {
+  padding-left: 20px;
 }
