--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+@font-face {
+font-family: "MyCustom";
+src: url("/fonts/MyCustom.woff2") format("woff2"),
+url("/fonts/MyCustom.woff") format("woff");
+font-weight: 400;
+font-style: normal;
+font-display: swap;
+}
+/* body { font-family: "MyCustom", Arial, sans-serif; } */
 body {
   display: flex;
   font-family: "Arial", sans-serif;
