--- a/index.css
+++ b/index.css
@@ -1,15 +1,16 @@
 @font-face {
-font-family: "MyCustom";
-src: url("/fonts/MyCustom.woff2") format("woff2"),
-url("/fonts/MyCustom.woff") format("woff");
-font-weight: 400;
-font-style: normal;
-font-display: swap;
+  font-family: "MyCustom";
+  src: url("/font/NotoSans-.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
-/* body { font-family: "MyCustom", Arial, sans-serif; } */
+/* body { font-family:  "MyCustom", Arial, sans-serif;} */
 body {
   display: flex;
-  font-family: "Arial", sans-serif;
+
+  font-family: "MyCustom", Arial, sans-serif;
+
   flex-direction: column;
   align-items: center;
   margin: 0;
@@ -19,6 +20,7 @@ body {
 
 article {
   background-color: #111;
+  font-family: "MyCustom", Arial, sans-serif;
 }
 
 video {
@@ -31,6 +33,10 @@ video {
 main {
   font-size: 18px;
   text-align: center;
+}
+/* this is the about me section font */
+pre {
+  font-family: "MyCustom", Arial, sans-serif;
 }
 
 article {
@@ -61,5 +67,7 @@ footer {
   color: #fff;
 }
 h3 {
+  /* this is the about me section */
   padding-left: 20px;
+  font-family: "MyCustom", Arial, sans-serif;
 }
